# aerodisspace-gamepad

./: Cargo.toml  README.MD  sdkconfig.defaults  xboxone_model_1708_firmware_5_17_hid_report_descriptor.txt
.cargo/: config.toml
examples/: read_gamepad.rs
src/: lib.rs  main.rs
src/gamepad/: ble.rs  gamepad.rs  mod.rs
src/gamepad/gamepads/: gamepads.rs  mod.rs  xboxone.rs
src/gamepad/gamepads/xboxone/: xboxone.rs
