[package]
name = "aerodis-gamepad"
version = "0.1.0"
authors = ["lnxdxtf <gabrielramosmichaliszen@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[profile.dev.package.esp-wifi]
opt-level = 3

[features]
default = ["controller"]

# Aircraft features
aircraft = ["common"]

# Controller features
controller = ["common", "esp32-nimble"]

## COMNMON FEATURES FOR ALL TARGETS
common = ["std", "embassy", "esp-idf-svc/native"]
std = ["esp-idf-svc/alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43"
anyhow = "1.0.80"
esp32-nimble = { git = "https://github.com/taks/esp32-nimble", branch = "develop", optional = true }


[build-dependencies]
embuild = "0.31.3"
